--- a/blogphp/styles/registerpage.css
+++ b/blogphp/styles/registerpage.css
@@ -29,13 +29,12 @@
 }
 
 #header #sigup{
-	float: right;
 	margin:0px 10px;
+	float: right;
 	border:1px solid black;
 	border-radius: 5px;
 	padding: 5px 20px;
-	background-color:#e9ebf0;
-
+	background-color: #e9ebf0; 
 
 }
 
@@ -49,6 +48,19 @@
 	color:black;
 }
 
+#wallpaper{
+	margin-top: 200px;
+	float:left;
+}
+
+#wallpaper img{
+	border-radius: 25px;
+	box-shadow: 8px 8px 8px 6px grey;
+	width: 450px;
+    height: 300px;
+}
+
+
 .container{
 	width: 1000px;
 	margin: 0 auto;
@@ -61,27 +73,16 @@
 	margin:auto 0;
 }
 
-#wallpaper{
-	margin-top: 50px;
-	
-	float:left;
-}
-
-#wallpaper img{
-	border-radius: 25px;
-	box-shadow: 8px 8px 8px 6px grey;
-	width: 512px;
-    height: 300px;
-}
-
 #signin{
 	position: relative;
 	float: right;
-	width:30%;
+	width:50%;
 	border :1px solid purple;
 	border-radius: 8px;
 	padding: 20px;
-	transform: translateY(40%);
+	transform: translateY(100px);
+	margin-bottom: 20px;
+	
 }
 
 #signin:hover{
@@ -89,13 +90,16 @@
 }
 
 #signin h2{
+	text-shadow: 1px 1px black;
+	color:#4dc969;
+	width:450px;
 	text-align: center;
 	position: absolute;
-	top: -40px;
-	left: 100px;
+	top: -70px;
+	left: 50px;
 
 }
-#signin input[type="text"] ,#signin input[type="password"]{
+#signin input[type="text"] ,#signin input[type="password"],select{
 	transform: translateX(5%);
 	display: block;
 	margin: 20px;
@@ -105,6 +109,12 @@
 	padding: 5px 10px;
 	width:80%;
 
+}
+
+#signin input[type="radio"]{
+	
+	margin:10px 10px;
+	transform: translateX(5%);
 }
 
 #signin input[type = "submit"]{
