--- a/blogphp/styles/editcontent.css
+++ b/blogphp/styles/editcontent.css
@@ -32,6 +32,7 @@
 	border-radius: 5px;
 	padding: 5px 20px;
 	color:black; 
+	background-color:#e9ebf0; 
 
 }
 
@@ -67,6 +68,7 @@
 	margin-left: 10px;
 	list-style: none;
 	display: inline-block;
+	background-color:#e9ebf0; 
 }
 
 #header .navbar li:hover{
