--- a/blogphp/styles/styleprofile.css
+++ b/blogphp/styles/styleprofile.css
@@ -31,6 +31,7 @@
 	margin-right:10px;
 	border:1px solid black;
 	border-radius: 5px;
+	background-color:#e9ebf0; 
 	padding: 5px 20px;
 }
 
@@ -57,6 +58,7 @@
 	margin-right: 10px;
 	list-style: none;
 	display: inline-block;
+	background-color:#e9ebf0; 
 }
 
 #header .navbar li:hover{
