--- a/blogphp/styles/registerpage.css
+++ b/blogphp/styles/registerpage.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
+body{
+
+	font-family: 'Montserrat', sans-serif;
+}
 
 *{
 	margin : 0px;
@@ -38,9 +43,9 @@
 
 }
 
-#header #sigup:hover{
+#sigup:hover{
 
-	box-shadow: 2px 2px black;
+	box-shadow: 0px 0px 10px black;
 }
 
 #header #sigup a{
@@ -49,15 +54,14 @@
 }
 
 #wallpaper{
-	margin-top: 200px;
+	margin-top: 180px;
 	float:left;
 }
 
 #wallpaper img{
 	border-radius: 25px;
-	box-shadow: 8px 8px 8px 6px grey;
-	width: 450px;
-    height: 300px;
+	width: 460px;
+    height: 390px;
 }
 
 
@@ -86,7 +90,7 @@
 }
 
 #signin:hover{
-	box-shadow: 8px 8px 8px grey;
+	box-shadow: 0px 0px 40px grey;
 }
 
 #signin h2{
@@ -104,7 +108,7 @@
 	display: block;
 	margin: 20px;
 	text-align: center;
-	border : 1px solid black;
+	border : 1px solid purple;
 	border-radius: 8px;
 	padding: 5px 10px;
 	width:80%;
