--- a/blogphp/styles/styleindex.css
+++ b/blogphp/styles/styleindex.css
@@ -1,5 +1,10 @@
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
+body{
+
+	font-family: 'Montserrat', sans-serif;
+}
 *{
 	margin : 0px;
 	padding: 0px;
@@ -41,7 +46,7 @@
 
 #header #sigup:hover{
 
-	box-shadow: 2px 2px black;
+	box-shadow: 0px 0px 10px black;
 }
 
 #header #sigup a{
@@ -63,8 +68,19 @@
 
 #wallpaper{
 	margin-top: 50px;
-	
 	float:left;
+	animation-name: moving;
+  	animation-duration: 4s;
+  	animation-iteration-count: infinite;
+  	transform: translateY(60px);
+}
+
+@keyframes moving {
+  0% {transform: translateY(0px);}
+  25% {transform: translateY(50px);}
+  50% {transform: translateY(-10px);}
+  75% {transform: translateY(-35px);}
+  100%{transform: translateY(0px);}
 }
 
 #wallpaper img{
@@ -72,6 +88,11 @@
 	box-shadow: 8px 8px 8px 6px grey;
 	width: 512px;
     height: 300px;
+}
+
+#wallpaper:hover{
+
+
 }
 
 #signin{
@@ -85,7 +106,7 @@
 }
 
 #signin:hover{
-	box-shadow: 3px 3px grey;
+	box-shadow: 0px 0px 10px grey;
 }
 
 #signin h2{
