--- a/blogphp/styles/styleprofile.css
+++ b/blogphp/styles/styleprofile.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+body{
+
+	font-family: 'Montserrat', sans-serif;
+}
+
 *{
 	margin : 0px;
 	padding: 0px;
@@ -41,9 +48,13 @@
 }
 #header #logout:hover{
 
-	box-shadow: 2px 2px black;
+	box-shadow: 0px 0px 10px black;
 }
 
+#sigup:hover{
+
+	box-shadow: 0px 0px 10px black;
+}
 
 #header .navbar{
 	display: inline-block;
@@ -62,7 +73,7 @@
 }
 
 #header .navbar li:hover{
-	box-shadow: 2px 2px black;
+	box-shadow: 0px 0px 10px black;
 }
 
 #header .navbar a{
@@ -93,3 +104,13 @@
 	margin: 10px 5px;
 }
 
+#profilelogo{
+	width:100px;
+	float:right;
+}
+
+#profilelogo img{
+	border:2px solid black;
+	transform: translateY(-10px);
+	border-radius:25px;
+}
