--- a/blogphp/styles/styleview_post.css
+++ b/blogphp/styles/styleview_post.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+body{
+
+	font-family: 'Montserrat', sans-serif;
+}
+
 *{
 	margin : 0px;
 	padding: 0px;
@@ -38,7 +45,12 @@
 
 #header #logout:hover{
 
-	box-shadow: 2px 2px black;
+	box-shadow: 0px 0px 10px black;
+}
+
+#sigup:hover{
+
+	box-shadow: 0px 0px 10px black;
 }
 
 #header #profilelogo{
@@ -71,7 +83,7 @@
 }
 
 #header .navbar li:hover{
-	box-shadow: 2px 2px black;
+	box-shadow: 0px 0px 10px black;
 }
 
 #header .navbar a{
