changed css in all pages

--- a/blogphp/styles/registerpage.css
+++ b/blogphp/styles/registerpage.css
@@ -15,23 +15,27 @@ body{
 	float: left;
 	width: 100%;
 	background-color: purple;
-	padding:20px;
+	padding:30px;
 	margin:auto 0;
 	border:2px solid black;
 }
 
 
+#header #logo{
+	display: inline-block;
+	width:100px;
+	height: 20px;
+}
+
 #header #logo p{
-	border: 1px solid black;
-	border-radius: 5px;
-	padding: 10px;
-	width:10%;
-	box-shadow: 3px 3px 4px black;
-	text-align: center;
-	color: black;
-	background-color:#e9ebf0;
+	
+	width:100%;
+	text-shadow: 5px 5px 3px black;
+	color: white;
+	font-size: 26px;	
 
 }
+
 
 #header #sigup{
 	margin:0px 10px;
@@ -39,7 +43,7 @@ body{
 	border:1px solid black;
 	border-radius: 5px;
 	padding: 5px 20px;
-	background-color: #e9ebf0; 
+	background-color:#badee6; 
 
 }
 
@@ -85,7 +89,7 @@ body{
 	border-radius: 8px;
 	padding: 20px;
 	transform: translateY(100px);
-	margin-bottom: 20px;
+	margin-bottom: 40px;
 	
 }
 
