--- a/blogphp/styles/stylehome.css
+++ b/blogphp/styles/stylehome.css
@@ -3,54 +3,68 @@
 body{
 
 	font-family: 'Montserrat', sans-serif;
+
 }
 
 *{
 	margin : 0px;
 	padding: 0px;
 	box-sizing: border-box;
+
 }
 
 #header{
 	float: left;
 	width: 100%;
 	background-color: purple;
-	padding:20px;
+	padding:30px;
 	margin:auto 0;
 	border:2px solid black;
+	z-index: 1;
+
+	
 }
 
+#header #logo{
+
+	display: inline-block;
+	width:100px;
+	height: 20px;
+}
 
 #header #logo p{
-	border: 1px solid black;
-	border-radius: 5px;
-	padding: 10px;
-	width:10%;
-	box-shadow: 3px 3px 4px black;
-	text-align: center;
-	color: black;
-	background-color:#e9ebf0;
-	animation-name:moving;
-	animation-duration: 4s;
-  	animation-iteration-count:infinite; 
+	
+	width:100%;
+	text-shadow: 5px 5px 3px black;
+	color: white;
+	font-size: 26px;	
 
 }
 
-@keyframes moving {
+/*@keyframes moving {
   0% {transform: translateX(0px);}
   25% {transform: translateX(20px); box-shadow:0px 0px 40px grey;}
   50% {transform: translateX(0px) ;box-shadow:0px 0px 0px black;}
   75% {transform: translateX(-20px) ;box-shadow:0px 0px 40px grey;}
   100%{transform: translateX(0px);}
+}*/
+
+@keyframes moving {
+	0%{ z-index: 0; box-shadow: 0px 0px 40px pink; }
+	25%{ z-index: 2; box-shadow: 0px 0px 40px black; }
+	50%{ z-index: 2; box-shadow: 0px 0px 40px pink; }
+	75%{ z-index: 0; box-shadow: 0px 0px 40px black; }
+	100%{ z-index: 2; box-shadow: 0px 0px 40px pink; }
+
 }
+
 
 #header #logout{
 	float: right;
 	border:1px solid black;
 	border-radius: 5px;
 	padding: 5px 20px;
-	background-color:#e9ebf0;
-
+	background-color:#badee6; 
 }
 
 #header #logout:hover{
@@ -79,7 +93,7 @@ body{
 #header .navbar li{
 	border:1px solid black;
 	border-radius: 5px;
-	background-color:#e9ebf0; 
+	background-color:#badee6; 
 	padding:5px 20px;
 	margin-right: 10px;
 	margin-left: 10px;
@@ -137,6 +151,7 @@ body{
 	transform: translateX(200px);
 	border-radius: 8px;
 	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 #main .allposts h2{
