--- a/blogphp/styles/styleindex.css
+++ b/blogphp/styles/styleindex.css
@@ -4,6 +4,7 @@
 body{
 
 	font-family: 'Montserrat', sans-serif;
+	background:url('../images/texture.jpg');
 }
 *{
 	margin : 0px;
@@ -15,23 +16,28 @@ body{
 	float: left;
 	width: 100%;
 	background-color: purple;
-	padding:20px;
+	padding:30px;
 	margin:auto 0;
 	border:2px solid black;
+
+
 }
 
+#header #logo{
+	display: inline-block;
+	width:100px;
+	height: 20px;
+}
 
 #header #logo p{
-	border: 1px solid black;
-	border-radius: 5px;
-	padding: 10px;
-	width:10%;
-	box-shadow: 3px 3px 4px black;
-	text-align: center;
-	color: black;
-	background-color:#e9ebf0;
+	
+	width:100%;
+	text-shadow: 5px 5px 3px black;
+	color: white;
+	font-size: 26px;	
 
 }
+
 
 #header #sigup{
 	float: right;
@@ -39,7 +45,7 @@ body{
 	border:1px solid black;
 	border-radius: 5px;
 	padding: 5px 20px;
-	background-color:#e9ebf0;
+	background-color:#badee6; 
 
 
 }
@@ -62,79 +68,63 @@ body{
 #main{
 	width: 100%;
 	float: left;
-	background-color: white;
 	margin:auto 0;
 }
 
-#wallpaper{
-	margin-top: 50px;
-	float:left;
-	animation-name: moving;
-  	animation-duration: 4s;
-  	animation-iteration-count: infinite;
-  	transform: translateY(60px);
-}
-
-@keyframes moving {
-  0% {transform: translateY(0px);}
-  25% {transform: translateY(50px);}
-  50% {transform: translateY(-10px);}
-  75% {transform: translateY(-35px);}
-  100%{transform: translateY(0px);}
-}
-
-#wallpaper img{
-	border-radius: 25px;
-	box-shadow: 8px 8px 8px 6px grey;
-	width: 512px;
-    height: 300px;
-}
-
-#wallpaper:hover{
-
-
-}
 
 #signin{
+
+	transform: translate(220px , 100px);
 	position: relative;
-	float: right;
-	width:30%;
+	width:50%;
 	border :1px solid purple;
 	border-radius: 8px;
-	padding: 20px;
-	transform: translateY(40%);
+	padding: 60px 40px;
+	/*background-color: rgba(240,240,240,0.4);*/
+	background-color:#f0f4f5;
+	
 }
 
 #signin:hover{
-	box-shadow: 0px 0px 10px grey;
+
+	box-shadow: 0px 0px 30px grey;
 }
 
 #signin h2{
-	text-align: center;
-	position: absolute;
+	position:absolute;
 	top: -40px;
-	left: 100px;
+	left: 190px;
+	color:purple;
+	
 
 }
+
+
+#signin label{
+	color:purple;
+	font-weight: bold;
+
+}
+
 #signin input[type="text"] ,#signin input[type="password"]{
-	transform: translateX(5%);
+	margin:10px 0px;
 	display: block;
-	margin: 20px;
-	text-align: center;
-	border : 1px solid black;
+	border : 1px solid purple;
 	border-radius: 8px;
 	padding: 5px 10px;
-	width:80%;
+	width:100%;
+	text-align: center;
 
 }
 
 #signin input[type = "submit"]{
+	margin-top: 10px;
 	margin-left: 35%;
 	color: purple;
 	font-weight: 800;
 	border:1px solid purple;
 	border-radius: 5px;
-	padding: 5px 10px;
+	padding: 8px 20px;
 }
 
 #signin input[type = "submit"]:hover{
