--- a/blogphp/styles/styleprofile.css
+++ b/blogphp/styles/styleprofile.css
@@ -15,21 +15,24 @@ body{
 	float: left;
 	width: 100%;
 	background-color: purple;
-	padding:20px;
+	padding:30px;
 	margin:auto 0;
 	border:2px solid black;
 }
 
 
+#header #logo{
+	display: inline-block;
+	width:100px;
+	height: 20px;
+}
+
 #header #logo p{
-	border: 1px solid black;
-	border-radius: 5px;
-	padding: 10px;
-	width:10%;
-	box-shadow: 3px 3px 4px black;
-	text-align: center;
-	color: black;
-	background-color:#e9ebf0;
+	
+	width:100%;
+	text-shadow: 5px 5px 3px black;
+	color: white;
+	font-size: 26px;	
 
 }
 
@@ -38,7 +41,7 @@ body{
 	margin-right:10px;
 	border:1px solid black;
 	border-radius: 5px;
-	background-color:#e9ebf0; 
+	background-color:#badee6; 
 	padding: 5px 20px;
 }
 
@@ -69,7 +72,7 @@ body{
 	margin-right: 10px;
 	list-style: none;
 	display: inline-block;
-	background-color:#e9ebf0; 
+	background-color:#badee6; 
 }
 
 #header .navbar li:hover{
