used htaccess in blogs learned about htaccess. configured it with RewriteEngine

--- a/blogphp/styles/styleprofile.css
+++ b/blogphp/styles/styleprofile.css
@@ -16,7 +16,7 @@ body{
 	width: 100%;
 	background-color: purple;
 	padding:30px;
-	margin:auto 0;
+	/*margin:auto 0;*/
 	border:2px solid black;
 }
 
